# jipe-evolve-clang-format

./: .gitattributes  .gitignore  README.md
src/: .clang-format  CMakeLists.txt  jipe-evolve-clang-format.cxx  jipe-evolve-clang-format.hxx  presets.hxx
